<resources>
    <string name="app_name">MyApp</string>
    <string name="nmedia">NMedia!</string>
    <string name="popst_menu_remove">Remove</string>
    <string name="write_your_text_input">Write your text</string>
    <string name="empty_post">Post is empty</string>
    <string name="popst_menu_edit">Edit</string>
    <string name="edit_mode">Edit mode</string>
    <string name="like_description">like</string>
    <string name="share_description">share</string>
    <string name="viewed_description">viewed</string>
    <string name="menu_description">menu</string>
    <string name="create_new_post_description">add new post</string>
    <string name="save">save</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="google_play_unavailable">сервис недоступен</string>
    <string name="authDialogTitle">Доступно только авторизованным пользователям</string>
    <string name="singIn">Войти</string>
    <string name="dialogCancel">Отмена</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="ok">OK</string>
    <string name="noAccount">Еще нет аккаунта?</string>
    <string name="ad">ad</string>
    <string name="retry">Retry</string>
    <string name="add_new_event">add new event</string>
    <string name="jobs_list">JOBS List</string>
    <string name="add">Add</string>
    <string name="add_a_new_job">Add a new job</string>
    <string name="play_or_pause">play or pause</string>

</resources>