<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_save"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/normal_margin"
        android:contentDescription="@string/save"
        />


    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/write_your_text_input"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="8dp" />

    <TextView
        android:id="@+id/editeModeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="24sp"
        android:text="@string/edit_mode"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/content"
        android:layout_gravity="start|top"

        />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="end|top"

            app:srcCompat="@drawable/ic_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/editGroup"
            app:layout_constraintTop_toTopOf="@id/editGroup"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/editGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility= "gone"
            app:constraint_referenced_ids="editeModeText,cancel"
            tools:ignore="UnknownId" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>



